[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/music/bgm1.wav" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://TutorialOverLay.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -68.3824, 17.1658, 0, 0, 0, 0, 613.869, 7.09563 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.0
margin_top = -282.0
margin_right = 488.0
margin_bottom = 1162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 550 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 0, -200 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -68.3824, 17.1658 )
rotation = -0.0147599

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[node name="TutorialOverLay" parent="." instance=ExtResource( 7 )]
[connection signal="firstHit" from="Player" to="TutorialOverLay" method="_on_Player_firstHit"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="end" from="HUD" to="." method="_on_HUD_end"]
[connection signal="show_player" from="HUD" to="Player" method="_on_HUD_show_player"]
[connection signal="show_player" from="HUD" to="." method="_on_HUD_show_player"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="show_player" from="TutorialOverLay" to="Player" method="_on_TutorialOverLay_show_player"]
[connection signal="show_player" from="TutorialOverLay" to="." method="_on_TutorialOverLay_show_player"]
